# database

./: README.md  docker-compose.yml  out.txt
LTPLabs/: package-lock.json  package.json
LTPLabs/src/: App.tsx  main.tsx  types.ts
data/: ltplabs.db
database/: .dockerignore  00-START-HERE.md  API_GATEWAY_INTEGRATION.md  Dockerfile  QUICK_SETUP.md  README.md  backup-database.sh  build-database.sh  deploy-database.sh  healthcheck.sh  init-db.sh  k8s-configmap.yaml  k8s-deployment.yaml  k8s-persistent-volume-claim.yaml  k8s-persistent-volume.yaml  k8s-secret.yaml  k8s-service.yaml  schema.sql  seed_data.sql  test-database.sh
kubernetes/: README.md
kubernetes/configmaps/: authentication-configmap.yaml  catalog-configmap.yaml  (+3 more)
scripts/: clean.sh  kubernetes_all.sh
services/authentication/: Dockerfile  README  pyproject.toml
services/authentication/app/: __init__.py  main.py
services/authentication/app/core/: config.py
services/authentication/app/services/: catalog_client.py  database_client.py
services/catalog/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/catalog/app/: main.py
services/catalog/app/api/: admin.py  auth.py  auth_route.py  clientes.py  demos.py  logs.py  pedidos.py  requests_route.py
services/catalog/app/core/: config.py
services/catalog/app/models/: admin.py  cliente.py  demo.py  log.py  pedido.py  requests.py
services/catalog/app/services/: admin_service.py  cliente_service.py  database_client.py  demo_service.py  log_service.py  pedido_service.py
services/catalog/app/storage/: __init__.py  mock_storage.py
(+116 files in other folders)
